[package]
name = "ethl2_route_canister"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = { version = "1", features = ["std"] }
thiserror = "1"
log = "0.4"
hex = "0.4"

# ic
candid = "0.9"
ic-cdk = "0.10.0"
ic-cdk-timers = "0.2"

# omnity_types = { path = "../../types" }
secp256k1 = { version = "0.28.2", features = ["recovery", "global-context"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"], default-features = false }
rlp = { version = "0.5.2", default-features = false }
num-traits = { version = "0.2", default-features = false }
bytes = { version = "^1.4.0", default-features = false }
serde_derive = "^1.0"

# essential dependencies of evm-rpc-canister
evm_rpc = { git = "https://github.com/internet-computer-protocol/evm-rpc-canister.git" }
cketh-common = { git = "https://github.com/dfinity/ic", rev = "8511846fb6352a0a4f9abae1a8fc8569aeba5f10", package = "ic-cketh-minter" }
ethers-core = "2.0.13"
itertools = "0.12.1"
alloy-sol-types = "0.6.4"
alloy-primitives = "0.6.4"
anyhow = "1.0.80"

[workspace]
