[package]
name = "evm_route"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = { version = "1", features = ["std"] }
thiserror = "1"
log = "0.4"
hex = "0.4"
ciborium = "0.2.1"
humantime = "2.1"
# ic
candid = "0.9"
ic-cdk = "0.11.0"
ic-cdk-timers = "0.2"
ic-stable-structures = "0.6"
ic-canisters-http-types = { git = "https://github.com/dfinity/ic", rev = "22b875f2b9508739b005d4352c14e877995f52fd" }
tiny-keccak = { version = "2.0.2", features = ["keccak"], default-features = false }
num-traits = { version = "0.2", default-features = false }
bytes = { version = "^1.4.0", default-features = false }
serde_derive = "^1.0"
k256 = "0.13"
# essential dependencies of evm-rpc-canister
ic-log = { git = "https://github.com/octopus-network/canister-sdk.git", branch = "v0.9.1-stablelog" }
evm_rpc = { git = "https://github.com/internet-computer-protocol/evm-rpc-canister.git", rev = "64f743e96d1db9c1cdc4089c2f54751193a000de" }
cketh-common = { git = "https://github.com/dfinity/ic", rev = "22b875f2b9508739b005d4352c14e877995f52fd", package = "ic-cketh-minter" }
ethers-core = "2.0.11"
itertools = "0.12.1"
anyhow = "1.0.80"
sha2 = "0.10.8"
ethers-contract = "2.0.14"
ethers-providers = "2.0.14"
futures = "0.3"
[workspace]
