[package]
name = "icp_route_canister"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
icrc-ledger-types = "0.1.5"
omnity_types = { path = "../../types" }
omnity_route_common = { path = "../common" }
