[package]
name = "icp_route"
version = "0.1.9"
edition = "2021"

[[bin]]
name = "icp_route"
path = "src/main.rs"

[dependencies]
candid = { workspace = true }
ciborium = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-ledger-types = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
ic-stable-structures = { workspace = true }
ic0 = "0.18.9"
ic-cdk-timers = "0.6"
num-traits = "0.2.17"
# ic-log = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-log", tag = "v0.12.x" }
ic-log = { git = "https://github.com/octopus-network/canister-sdk.git", branch = "v0.12.x-stablelog" }

icrc-ledger-types = { git = "https://github.com/dfinity/ic", tag = "release-2024-01-18_23-01" }
icrc-ledger-client-cdk = { git = "https://github.com/dfinity/ic", tag = "release-2024-01-18_23-01" }
ic-ledger-canister-core = { git = "https://github.com/dfinity/ic", tag = "release-2024-01-18_23-01" }
ic-base-types = { git = "https://github.com/dfinity/ic", tag = "release-2024-01-18_23-01" }
ic-icrc1-ledger = {git = "https://github.com/dfinity/ic", tag = "release-2024-01-18_23-01" }
omnity_types = { path = "../../types" }

ic-canisters-http-types = { git = "https://github.com/dfinity/ic", tag = "release-2024-03-06_23-01+p2p" }
ic-ic00-types = { git = "https://github.com/dfinity/ic", tag = "release-2024-01-18_23-01" }
ic-crypto-sha2 = { git = "https://github.com/dfinity/ic", tag = "release-2024-01-18_23-01" }
ic-canister-log = { git = "https://github.com/dfinity/ic", tag = "release-2024-01-18_23-01" }
hex = "0.4.3"

futures="0.3"
scopeguard = "1.1.0"

[dev-dependencies]
ic-test-utilities-load-wasm = { git = "https://github.com/dfinity/ic", tag = "release-2024-01-18_23-01" }
icp-ledger = { git = "https://github.com/dfinity/ic", tag = "release-2024-01-18_23-01" }
dfn_candid = { git = "https://github.com/dfinity/ic", tag = "release-2024-01-18_23-01" }
