[package]
name = "near_route_canister"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
omnity_types = { path = "../../types" }
# near dependencies
near-client = "0.7.2"
near-primitives = "0.26.0"
near-crypto = "0.19"
borsh = { version = "1.1", default-features = false, features = ["derive"] }
