[package]
name = "tendermint_route_canister"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid ={ workspace = true }
ic-cdk = { workspace = true }
ic-cdk-timers = "0.1"
tm-verifier = { version = "0.34", features = ["rust-crypto"], default-features = false, package = "tendermint-light-client-verifier" }
thiserror = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
